3.0.0 (unreleased)
------------------


2.0.10 (2020-07-03)
-------------------

- Correct release date.


2.0.9 (2020-07-03)
------------------

- Add boolean HTML attributes per Chameleon 3.8.0.

  All checkboxes, radios, and selects that use boolean HTML attributes
  (selected, checked, etc.) previously used `literal_false` and would drop any
  `False` value from rendering as an HTML attribute. In Chameleon 3.8.0,
  `literal_false` is removed and must instead use `boolean_attributes` to set
  defaults.

  See https://github.com/Pylons/deform/issues/417


2.0.8 (2019-10-07)
------------------

- Add HTML5 attributes to buttons.
  See https://github.com/Pylons/deform/pull/390


2.0.7 (2018-11-14)
------------------

- Add `tags` option support to `Select2Widget`
  See https://github.com/Pylons/deform/pull/373

- Change Python 3.7 to use stable version, 3.8-dev as allowed failure, in
  Travis.
  See https://github.com/Pylons/deform/pull/377

- Update Bootstrap to 3.3.7.

- Add support for HTML5 attributes (e.g. including placeholder and maxlength)
  See https://github.com/Pylons/deform/pull/345

2.0.6 (2018-08-29)
------------------

- Drop Python 3.3 support.
  See https://github.com/Pylons/deform/pull/371

- Add support to Python 3.7.

- Make date_submit and time_submit optional in DateTimeInputWidget
  See https://github.com/Pylons/deform/pull/369

- Remove pinning of iso8601 to 0.1.11
  See https://github.com/Pylons/deform/pull/364

- i18n cleanup https://github.com/Pylons/deform/pull/367 and https://github.com/Pylons/deform/pull/368

2.0.5 (2018-02-20)
------------------

- i18n cleanup https://github.com/Pylons/deform/pull/332 and https://github.com/Pylons/deform/pull/363

- Fix bug in ``_FieldStorage`` under Python 3.x (issues #339 and #357).

- Declare Python 3.6 compatibility and enable tests against Python 3.6 (all tests pass with no changes).

- Closes #333: MANIFEST.in including docs, licenses and text files.
