@@ -121,6 +121,7 @@ Contributors
 - Calvin Hendryx-Parker, 2013/09/03
 - Tim Tisdall, 2014/06/04
 - Cédric Messiant, 2014/06/27
+- Mike Dunne, 2015/05/08
 - Josip Delić, 2016/02/16
 - Bert JW Regeer, 2016/02/16
 - Steve Piercy, 2016/02/19
@@ -133,6 +134,7 @@ Contributors
 - Andreas Kaiser, 2018/01/09
 - Hans-Peter Jansen, 2018/02/18
 - Erico Andrei, 2018/02/18
+- George Mamalakis, 2018/03/22
 - Arnaud Morvan, 2018/04/10
 - Maksym Shalenyi, 2018/06/03
 - Krystian Rosiński, 2018/10/14
