@@ -1,7 +1,8 @@
 <div tal:define="css_class css_class|field.widget.css_class;
                  style style|field.widget.style;
                  oid oid|field.oid;
-                 inline getattr(field.widget, 'inline', False)"
+                 inline getattr(field.widget, 'inline', False);
+                 autofocus autofocus|field.autofocus"
      tal:omit-tag="not inline">
   ${field.start_sequence()}
   <div tal:repeat="choice values | field.widget.values"
@@ -13,6 +14,7 @@
       <input tal:attributes="checked value in cstruct;
                              class css_class;
                              style style;
+                             autofocus autofocus;
                              attributes|field.widget.attributes|{};"
              type="checkbox"
              name="checkbox"
