@@ -1,7 +1,8 @@
 <div tal:define="css_class css_class|field.widget.css_class;
                  oid oid|field.oid;
                  style style|field.widget.style;
-                 type_name type_name|field.widget.type_name;"
+                 type_name type_name|field.widget.type_name;
+                 autofocus autofocus|field.autofocus"
       tal:omit-tag="">
   ${field.start_mapping()}
   <input type="${type_name}"
@@ -10,6 +11,7 @@
 
          tal:attributes="class string: ${css_class or ''} form-control hasDatepicker;
                          style style;
+                         autofocus autofocus;
                          attributes|field.widget.attributes|{};"
          id="${oid}"/>
   ${field.end_mapping()}
