@@ -3,7 +3,8 @@
       tal:define="oid oid|field.oid;
                   name name|field.name;
                   css_class css_class|field.widget.css_class;
-                  style style|field.widget.style;">
+                  style style|field.widget.style;
+                  autofocus autofocus|field.autofocus">
   ${field.start_mapping()}
   <div class="row">
     <div class="col-xs-4"><div class="input-group">
@@ -11,6 +12,7 @@
       <input type="text" name="year" value="${year}"
              class="span2 form-control ${css_class or ''}"
              tal:attributes="style style;
+                             autofocus autofocus;
              				 year_attributes|field.widget.year_attributes|{};"
              maxlength="4"
              id="${oid}"/>
