@@ -1,9 +1,11 @@
-<input 
-    type="password" 
-    name="${name|field.name}" 
-    value="${field.widget.redisplay and cstruct or ''}" 
+<input
+    tal:define="autofocus autofocus|field.autofocus"
+    type="password"
+    name="${name|field.name}"
+    value="${field.widget.redisplay and cstruct or ''}"
     tal:attributes="style style|field.widget.style;
                     class string: form-control ${css_class|field.widget.css_class or ''};
+                    autofocus autofocus;
                     attributes|field.widget.attributes|{};"
     id="${oid|field.oid}"/>
 
