@@ -1,7 +1,8 @@
 <div tal:define="oid oid|field.oid;
                  css_class css_class|field.widget.css_class;
                  style style|field.widget.style;
-                 inline getattr(field.widget, 'inline', False);"
+                 inline getattr(field.widget, 'inline', False);
+                 autofocus autofocus|field.autofocus"
      tal:omit-tag="not inline">
   ${field.start_rename()}
   <div tal:repeat="choice values | field.widget.values"
@@ -13,6 +14,7 @@
       <input tal:attributes="checked value == cstruct;
                              class css_class;
                              style style;
+                             autofocus autofocus;
                              attributes|field.widget.attributes|{};"
              type="radio"
              name="${oid}"
