@@ -2,7 +2,8 @@
                   css_class css_class|field.widget.css_class;
                   oid oid|field.oid;
                   style style|field.widget.style|None;
-                  type_name type_name|field.widget.type_name;"
+                  type_name type_name|field.widget.type_name;
+                  autofocus autofocus|field.autofocus"
       tal:omit-tag="">
   ${field.start_mapping()}
   <input type="${type_name}"
@@ -11,6 +12,7 @@
          tal:attributes="size size;
                          class string: ${css_class or ''} form-control hasDatepicker;
                          style style;
+                         autofocus autofocus;
                          attributes|field.widget.attributes|{};"
          id="${oid}"/>
   ${field.end_mapping()}
