@@ -1,6 +1,17 @@
 3.0.0 (unreleased)
 ------------------
 
+- Removed deform.js:focusFirstInput()
+
+  Forms have an optional focus parameter ('on'|'off')
+    - 'on': if the form contains an input with autofocus='on', that input field
+          will receive focus.
+    - 'on': if the form does not contain an input with autofocus='on', the first
+          input field of the form will receive focus.
+    - 'off' disables focusing for that form.
+
+  Default behaviour is 'on' (unchanged).
+
 
 2.0.10 (2020-07-03)
 -------------------
